# xcore-auth

./: README.md  plugin.sig  plugin.yaml  pyproject.toml
data/: xflow_integration.json
data/migrations/: env.py
doc/: mvp.md  roadmap.md
src/: backend.py  ipc.py  main.py  xflowIntegration.md
src/models/: __init__.py  audit.py  base.py  role.py  session.py  user.py
src/repositories/: __init__.py  audit.py  role.py  session.py  user.py
src/routes/: __init__.py  audit.py  auth.py  deps.py  oauth.py  rbac.py  sessions.py  users.py
src/schemas/: __init__.py  audit.py  auth.py  common.py  rbac.py  session.py  user.py
src/services/: __init__.py  audit.py  auth.py  email.py  mfa.py  oauth.py  password.py  rbac.py  security.py  session.py  token.py
tests/: conftest.py  test_auth_route_flows.py  test_auth_service.py  test_rbac_service.py  test_xcore_plugin_rbac_injection.py
