[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.6",
    "geoip2>=5.2.0",
    "pillow>=12.1.1",
    "pydantic[email]>=2.12.5",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "ua-parser>=1.0.1",
    "xcore",
]

[tool.uv.sources]
xcore = { git = "https://www.github.com/traoreera/xcore.git" }


[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
